# 6DofPoseEstimation

./: .gitignore  6DofPoseEstimation.slnx  6DofPoseEstimation.vcxproj  6DofPoseEstimation.vcxproj.filters  README.md  TormadStuff.lnk  main.cpp  tmp_minenv_init_err.txt  tmp_minenv_init_out.txt  tmp_minenv_out.txt  treeOutput  treeOutputNew
gigaposeFork/: .gitignore  PORTING.md  environment.yml  first_try.logcd  gen.py  gigapose_T282_fixes.patch  gigapose_T282_working.patch  gigapose_bridge.py  gigapose_runtime.py  pyproject.toml  test.py
gigaposeFork/configs/: test.yaml
gigaposeFork/configs/data/: bop.yaml  inference.yaml  transform_inference.yaml
gigaposeFork/configs/machine/: local.yaml
gigaposeFork/configs/machine/trainer/: local.yaml
gigaposeFork/configs/model/: large.yaml
gigaposeFork/configs/model/ae_net/: dinov2_l.yaml
gigaposeFork/configs/model/ist_net/: resnet.yaml
gigaposeFork/configs/user/: default.yaml
gigaposeFork/gigaPose_datasets/datasets/T282/: test_targets_bop19.json
gigaposeFork/src/: runtime.py
gigaposeFork/src/custom_megapose/: template_dataset.py  transform.py  web_scene_dataset.py
gigaposeFork/src/dataloader/: scene.py  template.py  test.py  train.py
gigaposeFork/src/lib3d/: torch.py
gigaposeFork/src/megapose/: __init__.py
gigaposeFork/src/megapose/datasets/: scene_dataset.py
gigaposeFork/src/models/: gigaPose.py  matching.py  poses.py  ransac.py
gigaposeFork/src/scripts/: convert_scenewise_to_imagewise.py
gigaposeFork/src/utils/: crop.py  dataset.py  inout.py  logging.py  pil.py  tensor_collection.py
(+122 files in other folders)
